--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,31 @@
+.card{
+  width:75%;
+  align-items: center;
+  margin-left:auto;
+  margin-right:auto;
+
+}
+
 .cards-container {
   display: flex;
   justify-content: space-between; /* Distributes the cards along the main axis with equal space between them */
+  background-color: rgb(126, 126, 126);
+}
+
+.cards-header {
+  background-color: rgb(160, 160, 160);
 }
 
 .card {
   width: calc(50% - 16px); /* Set the width of each card to half of the container width, minus padding */
+}
+
+.card1{
+  width:80%;
+  height:90px;
+  overflow-y:scroll;
+}
+
+.card2{
+  width:20%;
 }
